# LearnGrid

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-test.txt
.github/workflows/: ci.yml  production-readiness.yml
backend/: README.md
backend/services/assessment-service/: .env.example  Dockerfile  pyproject.toml
backend/services/assessment-service/apps/assessments/: models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/services/assessment-service/apps/assessments/migrations/: 0001_initial.py  0002_assignmentsubmission.py
backend/services/assessment-service/apps/assessments/tests/: test_assessment_authoring.py  test_assignment_submissions.py  test_authorization_helpers.py  test_health.py  test_quiz_attempts.py
backend/services/assessment-service/config/: urls.py
backend/services/assessment-service/config/settings/: base.py
backend/shared/learngrid-authz/: pyproject.toml
backend/shared/learngrid-authz/src/learngrid_authz/: __init__.py  client.py
backend/shared/learngrid-authz/tests/: test_authz.py
backend/shared/learngrid-observability/: pyproject.toml
backend/shared/learngrid-observability/src/learngrid_observability/: __init__.py  django.py  health.py
backend/shared/learngrid-observability/tests/: test_django_observability.py
backend/shared/learngrid-redis/: pyproject.toml
backend/shared/learngrid-redis/src/learngrid_redis/: __init__.py  cache.py  client.py  keys.py  locks.py  rate_limit.py
backend/shared/learngrid-redis/tests/: test_redis_helpers.py
backend/shared/learngrid-security/: pyproject.toml
backend/shared/learngrid-security/src/learngrid_security/: __init__.py  config.py
backend/shared/learngrid-security/tests/: test_security_config.py
docs/: AGENTS.md  API_STRUCTURE.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  CHANGELOG.md  DATABASE_SCHEMA.md  DB_STRUCTURE.md  DEVELOPMENT.md  FRONTEND_ARCHITECTURE.md  KNOWN_ISSUES.md  LIVING_DOCUMENT.md  SECURITY.md  SPECIFICATION.md  TASKS.md  TESTING_STRATEGY.md
docs/api-design/: API-001-service-health-and-dev-stack.md  API-002-token-session-security.md  API-003-rbac-authorization.md  API-004-user-profile-management.md  API-005-institution-batch-department-management.md  API-006-course-catalog-metadata.md  API-007-course-structure-versioning.md  API-008-content-upload-storage-access.md  API-009-enrollment-access-management.md  API-010-learning-progress-tracking.md  API-011-dashboards-portals.md  API-012-assessment-authoring.md  API-013-quiz-attempts-exams.md  API-014-assignment-submissions.md  API-015-grading-results-audit.md  API-016-certificates.md  API-017-notifications.md  API-018-search-reporting-analytics.md  API-019-api-gateway.md  README.md
docs/backend-hardening/: HARD-026-analytics-notifications-certificates-content.md  HARD-026-api-completeness.md  HARD-026-authorization-tenant-isolation.md  HARD-026-eventing-async.md  HARD-026-migrations-retention-compliance.md  README.md
docs/db-design/: DBD-001-service-databases.md  DBD-002-auth-token-session.md  DBD-003-rbac-authorization.md  DBD-004-user-profile-management.md  DBD-005-institution-batch-department-management.md  DBD-006-course-catalog-metadata.md  DBD-007-course-structure-versioning.md  DBD-008-content-upload-storage-access.md  DBD-009-enrollment-access-management.md  DBD-010-learning-progress-tracking.md  DBD-011-dashboards-portals.md  DBD-012-assessment-authoring.md  DBD-013-quiz-attempts-exams.md  DBD-014-assignment-submissions.md  DBD-015-grading-results-audit.md  DBD-016-certificates.md  DBD-017-notifications.md  DBD-018-search-reporting-analytics.md  README.md
docs/deployment-design/: DEPLOY-023-ci-cd-deployment-observability.md  README.md
docs/event-design/: EVT-020-kafka-eventing.md  README.md
docs/observability-design/: OBS-023-grafana-stack.md  README.md
docs/plans/: PLAN-T-001.md  PLAN-T-002.md  PLAN-T-003.md  PLAN-T-004.md  PLAN-T-005.md  PLAN-T-006.md  PLAN-T-012-T-013.md  PLAN-T-014-T-015.md  PLAN-T-016.md  PLAN-T-018-T-019.md  PLAN-T-020.md  PLAN-T-021.md  PLAN-T-022.md  PLAN-T-023.md  PLAN-T-024.md  PLAN-T-025.md  PLAN-T-026.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: generate-local-gateway-cert.sh  run-dev.sh  verify-performance-gates.sh  verify-postgres-backup-restore.sh  verify-staging-release.sh
tools/: scaffold_backend_services.py
(+318 files in other folders)
