[tool.poetry]
name = "learngrid-assessment-service"
version = "0.1.0"
description = "LearnGrid LMS assessment-service baseline"
authors = ["LearnGrid LMS"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
django = "^5.2.8"
djangorestframework = "^3.16.1"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.9.0"
dj-database-url = "^3.0.1"
pyjwt = "^2.10.1"
psycopg = { version = "^3.2.12", extras = ["binary"] }
redis = "^7.0.1"
gunicorn = "^23.0.0"
learngrid-events = { path = "../../shared/learngrid-events", develop = true }
learngrid-authz = { path = "../../shared/learngrid-authz", develop = true }
learngrid-security = { path = "../../shared/learngrid-security", develop = true }
learngrid-observability = { path = "../../shared/learngrid-observability", develop = true }

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.2.7"
djangorestframework-stubs = "^3.16.5"
mypy = "^1.18.2"
pytest = "^9.0.1"
pytest-django = "^4.11.1"
ruff = "^0.14.6"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
