[tool.poetry]
name = "learngrid-authz"
version = "0.1.0"
description = "Shared remote authorization helpers for LearnGrid LMS services"
authors = ["LearnGrid LMS"]
packages = [{ include = "learngrid_authz", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
django = "^5.2.8"
djangorestframework = "^3.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.6"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
