[tool.poetry]
name = "learngrid-observability"
version = "0.1.0"
description = "LearnGrid LMS observability helpers"
authors = ["LearnGrid LMS"]
packages = [{ include = "learngrid_observability", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
django = ">=5.2,<6.0"
djangorestframework = "^3.16.1"
django-prometheus = "^2.4.1"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp-proto-http = "^1.29.0"
opentelemetry-instrumentation-django = "^0.50b0"
sentry-sdk = { version = "^2.20.0", extras = ["django"] }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.6"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
