[tool.poetry]
name = "learngrid-security"
version = "0.1.0"
description = "Shared security configuration helpers for LearnGrid LMS"
authors = ["LearnGrid LMS"]
packages = [{ include = "learngrid_security", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.6"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
